20170519: 3.6.3
	* configure.ac: adjusted the link sequence to avoid the 
	".../libX11.so: error adding symbols: DSO missing ..." issue.
	* libcsoup: disabled the build of the test program for Android.
	* Makefile.am: Added the 64x64 icon.
	* ezgui.c: Fixed the bug which failed to save the transparent
	screenshots.

20170517:
	* ezgui.c: Added event to font_face text entry so it can choose
	fonts directly.
	* ezgui.c: Using IUP internal iupGetFontInfo() function to parse the
	font face.

20170515: 3.6.2
	* ezgui.c: Fixed the bug that failed to restore the default value
	of the Grid Setting as well as the text control detection.
	Three issues were related to this bug:
	1. text control didn't hook up the event process
	2. the profile was disabled but failed to enable again
	3. the font_gtk_name field dereferenced to the volatile contents 
	of IupGetAttribute().

20170514:
	* ezgui.c: Fixed the bug that the label control has a different
	background colour than the dialog background.
	The bug was caused by the tab control which came from the Windows
	theme.

20170513:
	* ffmpeg_3_x: Merged the 'deprecated build' from the ffmpeg_3_x branch
	because this build can barely work on ffmpeg 3.3.

20170512:
	* ezgui.c: Fixed the bug that the zoom option layout is inconsistent in 
	different distros. In GTK2 the text control applied the vertical
	alignment of the "+/-" button. In GTK3 on the other hand, the "+/-"
	button turned to be horizontal, which means the text control need a
	larger size attribution.
	* id_lookup.c: Normalized the information label in the head margin of
	the screenshot canvas.

20170511:
	* libcsoup: updated to 0.9.7 to remove the -Wshift-negative-value warning.
	* ezgui.c: Fixed the bug which deleting all entries in GTK3.
	In GTK3 once an entry was removed, the focus automatically moved to
	the next entry, unlike GTK2, which caused the constantly deleting.
	* ezgui.c: Fixed the bug which generating screenshot with wrong